chore: add prettier

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,8 +5,7 @@
   "main": "main.py",
   "scripts": {
     "dev": "uv run uvicorn app.main:app --reload",
-    "lint": "uv run ruff check",
-    "lint:fix": "uv run ruff check --fix"
+    "lint": "uv run ruff check --fix"
   },
   "keywords": [],
   "author": "",
