--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "check-types": "turbo run check-types"
   },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.5.1",
     "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "turbo": "^2.5.5",
     "typescript": "5.8.3"
   },
