--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,5 +1,5 @@
 {
-  "*.{js,jsx,ts,tsx}": ["prettier --write", "eslint --fix", "eslint"],
+  "*.{js,jsx,ts,tsx}": ["prettier --write", "next lint --fix", "next lint"],
   "*.{json,md,yml}": ["prettier --write"],
   "*.py": ["ruff format"]
 }
