--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,6 +20,9 @@
     "motion": "^12.23.12",
     "next": "^15.4.2",
     "next-themes": "^0.4.6",
+    "openapi-fetch": "^0.14.0",
+    "openapi-react-query": "^0.5.0",
+    "openapi-typescript": "^7.8.0",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
