--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "check-types": "turbo run check-types",
     "commitlint": "commitlint --edit",
-    "prepare": "husky"
+    "prepare": "husky",
+    "api:gen": "tsx ./apps/web/src/lib/api/generate.ts"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
@@ -19,6 +20,7 @@
     "lint-staged": "^16.1.4",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
+    "tsx": "^4.20.3",
     "turbo": "^2.5.5",
     "typescript": "5.8.3"
   },
