--- a/apps/api/pyproject.toml
+++ b/apps/api/pyproject.toml
@@ -5,7 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
+    "alembic>=1.16.4",
     "fastapi[standard]>=0.116.1",
+    "pgvector>=0.4.1",
 ]
 
 [dependency-groups]
