--- a/apps/api/pyproject.toml
+++ b/apps/api/pyproject.toml
@@ -8,6 +8,8 @@ dependencies = [
     "alembic>=1.16.4",
     "fastapi[standard]>=0.116.1",
     "pgvector>=0.4.1",
+    "psycopg[binary]>=3.2.9",
+    "psycopg2-binary>=2.9.10",
 ]
 
 [dependency-groups]
