feat: implement user authentication service with registration and password hashing

--- a/apps/api/pyproject.toml
+++ b/apps/api/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "pgvector>=0.4.1",
     "psycopg[binary]>=3.2.9",
     "psycopg2-binary>=2.9.10",
+    "bcrypt>=4.3.0",
 ]
 
 [dependency-groups]
