--- a/apps/api/pyproject.toml
+++ b/apps/api/pyproject.toml
@@ -11,6 +11,8 @@ dependencies = [
     "psycopg[binary]>=3.2.9",
     "psycopg2-binary>=2.9.10",
     "bcrypt>=4.3.0",
+    "pyjwt>=2.10.1",
+    "python-jose[cryptography]>=3.3.0",
 ]
 
 [dependency-groups]
