--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -32,7 +32,8 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
-    "zod": "^4.0.15"
+    "zod": "^4.0.15",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
