--- a/apps/api/pyproject.toml
+++ b/apps/api/pyproject.toml
@@ -5,7 +5,14 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
+    "alembic>=1.16.4",
     "fastapi[standard]>=0.116.1",
+    "pgvector>=0.4.1",
+    "psycopg[binary]>=3.2.9",
+    "psycopg2-binary>=2.9.10",
+    "bcrypt>=4.3.0",
+    "pyjwt>=2.10.1",
+    "python-jose[cryptography]>=3.3.0",
 ]
 
 [dependency-groups]
