--- a/apps/api/pyproject.toml
+++ b/apps/api/pyproject.toml
@@ -18,4 +18,8 @@ dependencies = [
 [dependency-groups]
 dev = [
     "ruff>=0.12.7",
+    "ty>=0.0.1a17",
 ]
+
+[tool.ty.src]
+exclude = ["alembic"]
