--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,9 @@ jobs:
           version: 9.8.0
           run_install: false
 
+      - name: Install uv
+        uses: astral-sh/setup-uv@v6
+
       - name: Setup Node.js environment
         uses: actions/setup-node@v4
         with:
