--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,10 @@ permissions:
   actions: read
   contents: read
 
+concurrency:
+  group: ci-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   main:
     runs-on: ubuntu-latest
@@ -23,6 +27,9 @@ jobs:
           version: 9.8.0
           run_install: false
 
+      - name: Install uv
+        uses: astral-sh/setup-uv@v6
+
       - name: Setup Node.js environment
         uses: actions/setup-node@v4
         with:
@@ -32,5 +39,11 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
-      - name: Build
-        run: pnpm build
+      - name: Run check types
+        run: pnpm run check-types
+
+      - name: Run lint
+        run: pnpm run lint
+
+      - name: Run build job
+        run: pnpm run build
