--- a/apps/api/pyproject.toml
+++ b/apps/api/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "bcrypt>=4.3.0",
     "pyjwt>=2.10.1",
     "python-jose[cryptography]>=3.3.0",
+    "minio>=7.2.16",
 ]
 
 [dependency-groups]
