--- a/compose.yml
+++ b/compose.yml
@@ -17,8 +17,30 @@ services:
     networks:
       - default
 
+  codex-minio:
+    image: minio/minio:latest
+    container_name: minio
+    restart: always
+    command: server /data --console-address ":9001"
+    ports:
+      - "9000:9000" # S3 API
+      - "9001:9001" # admin console
+    environment:
+      - MINIO_ROOT_USER=${MINIO_ROOT_USER}
+      - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD}
+    volumes:
+      - minio-data:/data
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      interval: 5s
+      timeout: 20s
+      retries: 20
+    networks:
+      - default
+
 volumes:
   pgdb-data:
+  minio-data:
 
 networks:
   default:
