--- a/apps/api/pyproject.toml
+++ b/apps/api/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "pyjwt>=2.10.1",
     "python-jose[cryptography]>=3.3.0",
     "minio>=7.2.16",
+    "jsonschema>=4.25.0",
 ]
 
 [dependency-groups]
