chore: update .env.example with API URL configuration

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ POSTGRES_PASSWORD="root_admin"
 
 MINIO_ROOT_USER="root_admin"
 MINIO_ROOT_PASSWORD="root_admin"
+
+NEXT_PUBLIC_API_URL=http://localhost:3001
+API_URL=http://localhost:3001
