--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/postcss": "^4.1.11",
     "@tanstack/react-form": "^1.19.0",
     "@tanstack/react-query": "^5.84.1",
+    "@xyflow/react": "^12.8.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.536.0",
