--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -29,6 +29,7 @@
     "motion": "^12.23.12",
     "next": "^15.4.2",
     "next-themes": "^0.4.6",
+    "nuqs": "^2.4.3",
     "openapi-fetch": "^0.14.0",
     "openapi-react-query": "^0.5.0",
     "openapi-typescript": "^7.8.0",
