--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,6 +24,7 @@
     "@xyflow/react": "^12.8.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "elkjs": "^0.10.0",
     "lucide-react": "^0.536.0",
     "motion": "^12.23.12",
