--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -40,6 +40,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
+    "use-debounce": "^10.0.5",
     "zod": "^4.0.15",
     "zustand": "^5.0.7"
   },
