--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,12 +21,16 @@
     "@tailwindcss/postcss": "^4.1.11",
     "@tanstack/react-form": "^1.19.0",
     "@tanstack/react-query": "^5.84.1",
+    "@xyflow/react": "^12.8.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
+    "elkjs": "^0.10.0",
     "lucide-react": "^0.536.0",
     "motion": "^12.23.12",
     "next": "^15.4.2",
     "next-themes": "^0.4.6",
+    "nuqs": "^2.4.3",
     "openapi-fetch": "^0.14.0",
     "openapi-react-query": "^0.5.0",
     "openapi-typescript": "^7.8.0",
@@ -36,6 +40,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
+    "use-debounce": "^10.0.5",
     "zod": "^4.0.15",
     "zustand": "^5.0.7"
   },
