--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -36,6 +36,7 @@
     "elkjs": "^0.10.0",
     "lucide-react": "^0.536.0",
     "motion": "^12.23.12",
+    "nanoid": "^5.1.5",
     "next": "^15.4.2",
     "next-themes": "^0.4.6",
     "nuqs": "^2.4.3",
