--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,12 +11,16 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.8",
@@ -24,13 +28,16 @@
     "@tailwindcss/postcss": "^4.1.11",
     "@tanstack/react-form": "^1.19.0",
     "@tanstack/react-query": "^5.84.1",
+    "@tanstack/react-table": "^8.21.3",
     "@xyflow/react": "^12.8.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
     "elkjs": "^0.10.0",
     "lucide-react": "^0.536.0",
     "motion": "^12.23.12",
+    "nanoid": "^5.1.5",
     "next": "^15.4.2",
     "next-themes": "^0.4.6",
     "nuqs": "^2.4.3",
@@ -39,6 +46,7 @@
     "openapi-typescript": "^7.8.0",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
+    "react-day-picker": "^9.9.0",
     "react-dom": "^19.1.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
