--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -34,6 +34,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "color": "^5.0.0",
     "date-fns": "^4.1.0",
     "elkjs": "^0.10.0",
     "lucide-react": "^0.536.0",
@@ -46,6 +47,7 @@
     "openapi-react-query": "^0.5.0",
     "openapi-typescript": "^7.8.0",
     "postcss": "^8.5.6",
+    "radix-ui": "^1.4.3",
     "react": "^19.1.0",
     "react-day-picker": "^9.9.0",
     "react-dom": "^19.1.0",
@@ -60,6 +62,7 @@
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@types/color": "^4.2.0",
     "@types/node": "^22.15.3",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.1",
