--- a/apps/api/pyproject.toml
+++ b/apps/api/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "python-jose[cryptography]>=3.3.0",
     "minio>=7.2.16",
     "jsonschema>=4.25.0",
+    "scalar-fastapi>=1.3.0",
 ]
 
 [dependency-groups]
